objects/SVMX_PS_VS_Part_Consumption_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to enable and disable part consumption settings</description>
    <label>Part Consumption Settings</label>
    <fields>
        <fullName>SVMX_PS_VS_Field_Type__c</fullName>
        <description>This indicates what type of value is expected for the custom setting</description>
        <inlineHelpText>This indicates what type of value is expected for the custom setting</inlineHelpText>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_VS_Text_Value__c</fullName>
        <description>Field to represent the text value</description>
        <inlineHelpText>Field to represent the text value</inlineHelpText>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_VS_Setting_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to represent boolean value (true/false)</description>
        <inlineHelpText>Field to represent boolean value (true/false)</inlineHelpText>
        <label>Setting Value</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>